# Newtpad

./: .gitignore  .gitignore.save  CMakeLists.txt  EditNotePage.qml  Main.qml  NoteCard.qml
Newtpad_V0.0.1/: EditNotePage.qml
Newtpad_V0.0.2/: CMakeLists.txt  NoteCard.qml  main.cpp
Newtpad_V0.0.3/: CMakeLists.txt  NoteCard.qml
Newtpad_V0.0.4/Newtpad_V0.0.4/: CMakeLists.txt  EditNotePage.qml  Main.qml
Newtpad_V0.0.5/: CMakeLists.txt  EditNotePage.qml  Main.qml  PhotoAttachment.qml  VoiceAttachment.qml  main.cpp
Newtpad_V0.0.6/: AddCategoryDialog.qml  CMakeLists.txt  EditNotePage.qml  NoteCard.qml  OpenNoteDialog.qml  PhotoAttachment.qml  ReminderDialog.qml  main.cpp
Newtpad_V0.0.7/: EditNotePage.qml  Main.qml  NoteCard.qml  PasswordDialog.qml  ShareDialog.qml  SplashScreenPage.qml  TodoListEditor.qml
Newtpad_V0.0.8/: EditNotePage.qml  Main.qml  NoteCard.qml  NotificationBanner.qml  ReminderDialog.qml  ShareDialog.qml  main.cpp
Newtpad_V0.0.9/: EditNotePage.qml  Main.qml  OpenNoteDialog.qml  PhotoAttachment.qml
Newtpad_V0.1.0/: CMakeLists.txt  EditNotePage.qml  PhotoAttachment.qml  VoiceAttachment.qml  main.cpp
Newtpad_V0.1.1/: CustomDialog.qml  EditNotePage.qml  Main.qml  NoteCard.qml  PasswordDialog.qml  ShareDialog.qml  TodoListEditor.qml  VoiceAttachment.qml
